Updated gradle, region mapping and a queue